Get rid of warnings